--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template-test",
-  "version": "0.0.1",
-  "description": "",
+  "name": "{{name}}",
+  "version": "1.0.0",
+  "description": "{{description}}",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/build.server.js",
     "build": "webpack --config  build/webpack.pro.conf.js"
   },
-  "author": "",
+  "author": "{{author}}",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.4.2",
@@ -36,21 +36,22 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "portfinder": "^1.0.20",
     "postcss-loader": "^3.0.0",
     "pre-commit": "^1.2.2",
-    "pug": "^2.0.3",
-    "pug-html-loader": "^1.1.5",
-    "pug-loader": "^2.4.0",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "{{#if cssModule==less}}"
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "{{#else}}"
+    "node-sass":"^4.11.0",
+    "sass-loader":"^7.1.0"
   }
 }
