--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "webpack --config  build/webpack.pro.conf.js"
   },
   "author": "{{author}}",
-  "license": "ISC",
+  "license": "MIT",
+  "engines": {
+    "node": "^8.11.2",
+    "npm":"^5.6.0"
+  },
   "devDependencies": {
     "autoprefixer": "^9.4.2",
     "axios": "^0.18.0",
