--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "webpack-merge": "^4.1.4",
     {{#if cssModule}}
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
+    "less-loader": "^4.1.0"
     {{else}}
     "node-sass":"^4.11.0",
     "sass-loader":"^7.1.0"
