--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "node": "^8.11.2",
     "npm":"^5.6.0"
   },
+  "keywords": [
+    "{{cssModule}}",
+    "template",
+    "cli"
+  ],
   "devDependencies": {
     "autoprefixer": "^9.4.2",
     "axios": "^0.18.0",
